@startuml models

entity User {
   * id: uuid
   full_name: string
   avatar_url: string
   --
   /me: GET
   /auth: POST
   /users: GET
   /users/:id: PUT
   /myflags/:id: GET
   /users/:id/rewards/:flag_id GET
}

entity Flag {
    * id: uuid
    * payer_id: uuid
    task: string
    days: int
    * asset_id: uuid
    amount: number
    times_achieved: int
    max_witness: int
    paid_at: datetime
    --
    /flags/:id: POST
    /flags: GET
    /flags/:id/done: PUT
}

entity Asset {
    * id: uuid
    symbol: string
    price_usd: number
    balance: number
    --
    /assets/:id: GET
}

entity Evidence {
    * attachment_id: uuid
    * flag_id: uuid
    file: file
    type: string
    url: string
    created_at: datetime
    --
    /flags/:id/done PUT
    /attachments/:attachment_id: POST
    /flags/:id/evidences: GET
}

entity Witness {
    * flag_id: uuid
    * payee_id: uuid
    verified: int
    --
    /flags/:id/:op: PUT // yes, no
    /flags/:id/witnesses: GET
}

Flag "1" --- "*" Evidence: upload
Flag "*" --- "1" Asset: pay
Flag "*" --- "*" Witness: verify
Witness "1" -- "*" Asset: award 
Witness "1" -- "*" User: reward 

@enduml
